Convert posts to mdx

--- a/src/posts/pascal-triangle-element.mdx
+++ b/src/posts/pascal-triangle-element.mdx
@@ -4,13 +4,20 @@ date: "2020-11-05"
 featuredImage: ./pascals-triangle-types.jpg
 ---
 
-Here is a problem in **UVA** book
+<div className={"mx-auto max-w-lg my-10"}>
 
-- Question: 485 - Pascal's Triangle of Death
-- [question link](https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&category=6&page=show_problem&problem=426)
-- Time limit: 3.000s
+  Here is a problem in **UVA** book
 
-The key to our solution is this formula : ` c = c * (line - i) / i `
+  - Question: 485 - Pascal's Triangle of Death
+  - [question link](https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&category=6&page=show_problem&problem=426)
+  - Time limit: 3.000s
+
+  The key to our solution is this formula : ` c = c * (line - i) / i `
+
+
+
+</div>
+
 
 ```java
 import java.math.BigInteger;
