Descriptions added for mdx files

--- a/src/posts/irangard-app.mdx
+++ b/src/posts/irangard-app.mdx
@@ -2,6 +2,7 @@
 title: "Irangard app project"
 date: "2021-07-30 12:30:00"
 featuredImage: ./irangard/irangard.jpg
+description: share images on map irangardapp 🤯
 ---
 
 ## Demo
