--- a/src/posts/pascal-triangle-element.mdx
+++ b/src/posts/pascal-triangle-element.mdx
@@ -2,6 +2,7 @@
 title: "Pascal Triangle element"
 date: "2020-11-05"
 featuredImage: ./pascals-triangle-types.jpg
+description: how to solve pascal triangle with java
 ---
 
 <div className={"mx-auto max-w-lg my-10"}>
