feat: add more translations and wordpress base style

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,3 +1,4 @@
 {
-  "bio-text": "I'm Mohammad Reza Khosravian. I was born at 1999 june in\n Bushehr Province ( a lovely port in south west of Iran ).\n I spend all my time on working with computers and it never makes\n me tired."
+  "bio-text": "I'm Mohammad Reza Khosravian. I was born at 1999 june in\n Bushehr Province ( a lovely port in south west of Iran ).\n I spend all my time on working with computers and it never makes\n me tired.",
+  "title": "Home | MRKHOSRAVIAN"
 }
