--- a/public/locales/fa/projects.json
+++ b/public/locales/fa/projects.json
@@ -1,3 +1,7 @@
 {
-  "Projects": "پروژه ها"
+  "Projects": "پروژه ها",
+  "Project": "پروژه",
+  "Description": "توضیحات",
+  "Date": "تاریخ",
+  "title": "پروژه ها"
 }
