--- a/public/locales/fa/home.json
+++ b/public/locales/fa/home.json
@@ -3,9 +3,10 @@
   "Biography": "بیوگرافی",
   "Experience": "تجربه",
   "Years": "سال",
-  "bio-text": "من فلان",
+  "bio-text": "من محمدرضا خسرویان هستم. من در خرداد سال ۱۳۷۸ در استان و شهر بوشهر به دنیا اومدم. عاشق کامپیوتر هستم و هیچوقت کار کردن با اون من رو خسته نمی کنه.",
   "Projects": "پروژه",
   "Old": "سن",
   "Languages": "زبان",
-  "Programmer, Computer and Food lover": "برنامه نویس، عشق کامپیوتر و غذا"
+  "Programmer, Computer and Food lover": "برنامه نویس، عشق کامپیوتر و غذا",
+  "title": "خانه | محمدرضا خسرویان"
 }
