feat(pagination): add pagination to blog

--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -14,5 +14,9 @@
   "Blog": "بلاگ",
   "Contact": "تماس",
   "Back to Posts": "بازگشت به پست ها",
-  "Published": "تاریخ انتشار"
+  "Published": "تاریخ انتشار",
+  "Next page": "صفحه بعد",
+  "Previous page": "صفحه قبل",
+  "Page": "صفحه",
+  "of": "از"
 }
