feat(accordion): add accordion to blog

--- a/data/posts/fa/db-class-1400.mdx
+++ b/data/posts/fa/db-class-1400.mdx
@@ -6,6 +6,14 @@ excerpt: حل تمرین
 tags: ['ta','db','sql']
 ---
 
-```sql
-SELECT * FROM users;
-```
+import { Accordion } from "../../../components/blocks/accordion";
+
+
+<Accordion title={'جلسه اول'}>
+
+  ```sql
+  SELECT * FROM users;
+  ```
+
+</Accordion>
+
