feat(blog): add edit post button

--- a/public/locales/fa/blog.json
+++ b/public/locales/fa/blog.json
@@ -1,4 +1,5 @@
 {
   "Blog Posts": "بلاگ",
-  "title": "بلاگ | محمدرضا خسرویان"
+  "title": "بلاگ | محمدرضا خسرویان",
+  "Edit this post": "ویرایش مطلب"
 }
