feat(downloadbtn): add download button component

--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -18,5 +18,6 @@
   "Next page": "صفحه بعد",
   "Previous page": "صفحه قبل",
   "Page": "صفحه",
-  "of": "از"
+  "of": "از",
+  "Download": "دانلود"
 }
