post(db-class-1400): add task 1

--- a/data/posts/fa/db-class-1400.mdx
+++ b/data/posts/fa/db-class-1400.mdx
@@ -530,5 +530,19 @@ import DownloadBtn from "../../../components/buttons/download";
 
 <Accordion title={"تمرین اول"} color={"yellow"}>
 
+  1. دیتابیس bookstore.
+      1. یک دیتابیس به اسم bookstore ساخته.
+      2. یک جدول به اسم book بسازید و ستون های `ISBN` به صورت عددی ( ترجیحا آن را کلید اصلی قرار دهید ) و `title` به صورت متن نهایتا ۲۵۵ کاراکتری و `pages`  ( تعداد صفحات ) به صورت عددی و  `price` هم به صورت عددی برای آن قرار دهید.
+      3. سه کتاب به صورت دلخواه در این جدول وارد کنید.
+      4. لیست تمام کتاب ها را دریافت کنید.
+      5. جدول و دیتابیس را پاک کنید.
+  2. کد و نام و همچنین سال استقلال تمام کشورها. ( اسم ستون سال استقلال کشور را در خروجی `independence_year` قرار دهید )
+  3. تعداد کشور هایی که مستقل نیستند.
+  4. تعداد کشور هایی که نام آنها پنج حرفی است و حرف سوم آنها `a` می باشد.
+  5. با استفاده از دستور `IN` لیست کشور هایی که ستون `Code` آنها برابر با کد کشورهایی که در سوال ۴ پیدا کردید‌ ، را دریافت کنید. ( می توانید کد ها را به صورت دستی در کوئری استفاده کنید ولی استفاده از کوئری های تودرتو امتیاز مثبت دارد )
+  5. لیست !! شهرهایی !! که اسم آنها با دو حرف اول اسم شما شروع یا پایان می یابد. ( درصورت صفر بودن مشکلی ندارد از لیست خالی عکس بفرستید )
+  6. لیست تمام کشورهایی که ( مساحتی بین ۵۰۰ هزار تا یک میلیون کیلومتر و جمعیتی بیشتر از ۵ میلیون دارند ) یا اینکه ( در قاره آفریقا هستند ) را برگردانید. ( قسمت های جدا شده توسط پرانتز دو شرط کاملا مجزا هستند )
+  7. چه تعداد فرم حکومت وجود دارد.
+  8. لیست کشورهایی که نام آنها با نام محلی آنها یکسان نیست را بر اساس بیشترین مقدار درآمد ناخالص ملی و در صورت برابری GNP بر اساس جمعیت کمتر مرتب کنید و دریافت کنید.
 
 </Accordion>
