post(db-class-1400): add sessions video on aparat

--- a/data/posts/fa/db-class-1400.mdx
+++ b/data/posts/fa/db-class-1400.mdx
@@ -80,6 +80,10 @@ import DownloadBtn from "../../../components/buttons/download";
 
 <Accordion title={'جلسه دوم - ایجاد و حذف دیتابیس و جدول'}>
 
+
+  <div id="50025941241"><script type="text/JavaScript" src="https://www.aparat.com/embed/R7B1h?data[rnddiv]=50025941241&data[responsive]=yes"></script></div>
+
+
   اولین دستوری که یاد میگیریم دستوری هست که توسط اون ما می توانیم لیستی از
   پایگاه داده های موجود رو مشاهده کنیم :
   ```sql
@@ -155,6 +159,8 @@ import DownloadBtn from "../../../components/buttons/download";
 </Accordion>
 
 <Accordion title={'جلسه سوم - آغاز کار با SELECT'}>
+
+  <div id="32414197944"><script type="text/JavaScript" src="https://www.aparat.com/embed/TE91a?data[rnddiv]=32414197944&data[responsive]=yes"></script></div>
 
   *مهم ترین بخش دستورات SQL ، دستورات SELECT هستند که برای بازیابی اطلاعات
   استفاده می شوند*
@@ -390,6 +396,10 @@ import DownloadBtn from "../../../components/buttons/download";
 
 <Accordion title={'جلسه چهارم - کار با like و کوئری های تودرتو و مرتب سازی'}>
 
+
+  <div id="42933832111"><script type="text/JavaScript" src="https://www.aparat.com/embed/dIOyb?data[rnddiv]=42933832111&data[responsive]=yes"></script></div>
+
+
   خب ما با دستورات شرطی آشنا شدیم و فقط `LIKE` در این بین جا موند
 
   از کلمه کلیدی `LIKE` زمانی استفاده می کنیم که بخوایم یک رشته رو با توجه به الگوی خاصی انتخاب کنیم
@@ -544,5 +554,28 @@ import DownloadBtn from "../../../components/buttons/download";
   6. لیست تمام کشورهایی که ( مساحتی بین ۵۰۰ هزار تا یک میلیون کیلومتر و جمعیتی بیشتر از ۵ میلیون دارند ) یا اینکه ( در قاره آفریقا هستند ) را برگردانید. ( قسمت های جدا شده توسط پرانتز دو شرط کاملا مجزا هستند )
   7. چه تعداد فرم حکومت وجود دارد.
   8. لیست کشورهایی که نام آنها با نام محلی آنها یکسان نیست را بر اساس بیشترین مقدار درآمد ناخالص ملی و در صورت برابری GNP بر اساس جمعیت کمتر مرتب کنید و دریافت کنید.
+
+</Accordion>
+
+<Accordion title={'جلسه پنجم'}>
+
+
+</Accordion>
+
+<Accordion title={'جلسه ششم'}>
+
+  <div id="97931789702"><script type="text/JavaScript" src="https://www.aparat.com/embed/v9D0Q?data[rnddiv]=97931789702&data[responsive]=yes"></script></div>
+
+</Accordion>
+
+<Accordion title={'جلسه هفتم'}>
+
+  <div id="97931789702"><script type="text/JavaScript" src="https://www.aparat.com/embed/v9D0Q?data[rnddiv]=97931789702&data[responsive]=yes"></script></div>
+
+</Accordion>
+
+<Accordion title={'جلسه هشتم'}>
+
+  <div id="21448551552"><script type="text/JavaScript" src="https://www.aparat.com/embed/oi3wu?data[rnddiv]=21448551552&data[responsive]=yes"></script></div>
 
 </Accordion>
