post(db-class-1400): add aparat playlist link

--- a/data/posts/fa/db-class-1400.mdx
+++ b/data/posts/fa/db-class-1400.mdx
@@ -18,6 +18,8 @@ import DownloadBtn from "../../../components/buttons/download";
 
 خب DBMS (سیستم مدیریت محتوا) که برای این درس انتخاب کردم MySQL هست
 
+لینک جلسات در آپارات : [aparat.com/playlist/1369637](https://www.aparat.com/playlist/1369637)
+
 <Accordion title={'جلسه اول - پیشنیاز ها'}>
 
   ## نصب MySQL
