feat: move projects source to mdx files

--- a/data/posts/fa/db-class-1400.mdx
+++ b/data/posts/fa/db-class-1400.mdx
@@ -1,6 +1,6 @@
 ---
 title: کلاس حل تمرین درس پایگاه داده – ترم فرد سال ۱۴۰۰
-image: https://wp.mrkhosravian.ir/wp-content/uploads/2021/10/uOrlNoMygRuSqPB1xrbo3gRZz8I4KahkpY2CuQj0.webp
+image: https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/2135-database_management_software.webp
 date: '2021-11-08T13:19:05.705Z'
 excerpt: حل تمرین
 tags: ['ta','db','sql']
