--- a/data/posts/en/pascal-triangle-element.mdx
+++ b/data/posts/en/pascal-triangle-element.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Pascal Triangle element"
 date: '2020-11-05T13:19:05.705Z'
-image: https://wp.mrkhosravian.ir/wp-content/uploads/2021/11/pascals-triangle-types.jpg
+image: https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/pascals-triangle-types.svg
 excerpt: how to solve pascal triangle with java
 ---
 
