feat: add zoomable image component

--- a/data/projects/en/appmoon.mdx
+++ b/data/projects/en/appmoon.mdx
@@ -1,9 +1,64 @@
 ---
-title: appmoon app
+title: Appmoon
 image: https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-14.jpg
 date: '2022-04-30T20:57:21.556Z'
-excerpt: appmoon is an app store
+excerpt: Appmoon is an app store
 tags: ['nextjs','app_store','asp.netcore']
 ---
 
-Appmoon
+
+
+import ImageGallery from "../../../components/gallery/ImageGallery"
+
+
+
+
+## Screenshots
+
+
+
+<ImageGallery images={[
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-37.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-40.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-43.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-45.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-47.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-49.jpg',
+    alt: ''
+  },
+]} />
+
+
+
+## Technologies
+
+### Backend
+
+|#|Name|
+|--|--|
+|1|Asp.net Core|
+|2|Mysql|
+
+
+### Frontend
+
+|#|Name|
+|--|--|
+|1|Next.js|
+|2|Tailwindcss|
