--- a/data/projects/en/irangardapp.mdx
+++ b/data/projects/en/irangardapp.mdx
@@ -2,7 +2,7 @@
 title: Irangard App
 image: https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/irangardapp/photo_2022-05-01_00-45-32.jpg
 date: '2022-05-02T19:26:35.147Z'
-excerpt: share your pictures on map
+excerpt: share pictures on map
 tags: ['nextjs','lumen','php']
 ---
 
