--- a/data/projects/fa/appmoon.mdx
+++ b/data/projects/fa/appmoon.mdx
@@ -7,4 +7,58 @@ tags: ['nextjs','app_store','asp.netcore']
 ---
 
 
-اپ مون
+
+import ImageGallery from "../../../components/gallery/ImageGallery"
+
+
+
+
+## Screenshots
+
+
+
+<ImageGallery images={[
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-37.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-40.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-43.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-45.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-47.jpg',
+    alt: ''
+  },
+  {
+    src: 'https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/appmoon/photo_2022-05-01_00-44-49.jpg',
+    alt: ''
+  },
+]} />
+
+
+
+## تکنولوژی ها
+
+### بک اند
+
+|#|نام تکنولوژی|
+|--|--|
+|1|Asp.net Core|
+|2|Mysql|
+
+
+### فرانت اند
+
+|#|تکنولوژی|
+|--|--|
+|1|Next.js|
+|2|Tailwindcss|
