post(fa/irangardapp.mdx): add demo

--- a/data/projects/fa/irangardapp.mdx
+++ b/data/projects/fa/irangardapp.mdx
@@ -1,17 +1,22 @@
 ---
-title: Irangard App
+title: ایرانگرد
 image: https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/irangardapp/photo_2022-05-01_00-45-32.jpg
 date: '2022-05-02T19:26:35.147Z'
-excerpt: share pictures on map
+excerpt: اشتراک تصاویر روی نقشه
 tags: ['nextjs','lumen','php']
 ---
 
 import ImageGallery from "../../../components/gallery/ImageGallery"
 
 
+## نسخه نمایشی
+
+برای مشاهده نسخه نمایشی به آدرس زیر بروید
+
+[irangardapp.ir](https://irangardapp.ir)
 
 
-## Screenshots
+## اسکرین شات ها
 
 
 
@@ -44,9 +49,9 @@ import ImageGallery from "../../../components/gallery/ImageGallery"
 
 
 
-## Technologies
+## تکنولوژی ها
 
-### Backend
+### بک اند
 
 |#|Name|
 |--|--|
@@ -57,7 +62,7 @@ import ImageGallery from "../../../components/gallery/ImageGallery"
 |5|OpenAPI|
 
 
-### Frontend
+### فرانت اند
 
 |#|Name|
 |--|--|
