post(en/kalamemobin.mdx): fix excerpt

--- a/data/projects/en/kalamemobin.mdx
+++ b/data/projects/en/kalamemobin.mdx
@@ -2,7 +2,7 @@
 title: Kalamemobin
 image: https://mrkhosravian.s3.ir-thr-at1.arvanstorage.com/kalamemobin.ir/photo_2022-05-01_00-46-59.jpg
 date: '2022-05-02T19:26:35.147Z'
-excerpt: Holy Quran application
+excerpt: Holy Quran application with recitation
 tags: ['kotlin','android','sqlite']
 ---
 
